@@ -126,6 +126,10 @@
 		Tag file for other symbols.
 	@item{@file{GPATH}}
 		Tag file for path of source files.
+	@item{@file{GTAGSROOT}}
+		If @var{GTAGSROOT} is not set and @file{GTAGSROOT} exist
+		in the same directory with @file{GTAGS} then use the value
+		as @var{GTAGSROOT}.
 	@item{@file{/etc/gtags.conf}, @file{$HOME/.globalrc}}
 		Configuration file.
 	@end_itemize
